--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
 </head>
 
 <body>
-	
 
-		<h1><strong><p align="center">Welcome.</strong> Please login.</p></h1>
+	<div id="login">
+
+		<h1><strong><p align="right>"Welcome.</strong> Please login.</p></h1>
 
 		<form action="javascript:void(0);" method="get">
 		</form>
