--- a/main.html
+++ b/main.html
@@ -17,32 +17,32 @@
 	<div id="map"></div>
 	<div class="col-xs-12" id="zone-btns">
 		<div class="col-xs-offset-1 col-xs-3">
-			<button onclick="" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored safe">
-			<i class="material-icons">directions_bus</i>
-			</button>
+			<a href="profile.html">
+				<button onclick="" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored safe">
+				<i class="material-icons">account_circle</i>
+				</button>
+			</a>
 		</div>
-		<div class="col-xs-3">
-			<button 
-			onclick="" 
-			class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored danger">
-			<i class="material-icons">train</i>
-			</button>
-		</div>
-		<div class="col-xs-3">
-			<button onclick="" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored danger">
-			<i class="material-icons">airplanemode_active</i>
-			</button>
+		<div class="col-xs-offset-3 col-xs-3">
+			<a href="editor.html">
+				<button onclick="" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored danger">
+				<i class="material-icons">add</i>
+				</button>
+			</a>
 		</div>
 	</div>
 </body>
 
+
+<script src="js/map.js"></script>
+
+
 <script async defer
-src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAwmDkG8MmwilGeUia3DaRMhui-z1nmr78&callback=initMap">
+src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBxvyr3dEr3Gm-ib5gV8A0uBdXvZ0qBUtQ&callback=initMap">
 </script>
 
 <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
 <script src="vendors/jquery/jquery.min.js"></script>
 <script src="js/config.js"></script>
-<script src="js/map.js"></script>
 
 </html>
