Added empty service worker

--- a/main.html
+++ b/main.html
@@ -5,6 +5,11 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="css/map.css">	
 
+	<link rel="apple-touch-icon" sizes="180x180" href="./assets/icons/icon.png">
+	<link rel="icon" type="image/png" href="/assets/icons/icon.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="/assets/icons/icon.png" sizes="16x16">
+    <link rel="manifest" href="./manifest.json">
+
 	<script src="https://www.gstatic.com/firebasejs/4.5.0/firebase.js"></script>
 
 	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
