--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 	<link rel="stylesheet" href="css/style.css">
 	<link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Open+Sans:400,300'>
 
+    <link rel="apple-touch-icon" sizes="180x180" href="./assets/icons/icon.png">
+	<link rel="icon" type="image/png" href="/assets/icons/icon.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="/assets/icons/icon.png" sizes="16x16">
+    <link rel="manifest" href="./manifest.json">
+
 	<script src="https://www.gstatic.com/firebasejs/4.5.0/firebase.js"></script>
 
 </head>
