--- a/main.html
+++ b/main.html
@@ -43,11 +43,15 @@
 
 
 <script async defer
-src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBxvyr3dEr3Gm-ib5gV8A0uBdXvZ0qBUtQ&callback=initMap">
+src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBxvyr3dEr3Gm-ib5gV8A0uBdXvZ0qBUtQ">
 </script>
 
 <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+
+<script defer src="vendors/bootstrap/js/bootstrap.min.js"></script>
 <script src="vendors/jquery/jquery.min.js"></script>
 <script src="js/config.js"></script>
 
 </html>
+
+<div id="modal-div"></div>
