--- a/editor.html
+++ b/editor.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
 		<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-		<link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
+		<link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.blue-red.min.css" />
 		<link rel="stylesheet" href="css/styleedit.css">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
@@ -12,6 +12,7 @@
 		<script src="https://www.gstatic.com/firebasejs/4.5.0/firebase.js"></script>
 	</head>
 	<body>
+
 		<div id="tb1">
   			<form action="#">
   				<div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label" >
@@ -24,7 +25,7 @@
 			<textarea class="form-control" rows="10" cols="47" id="blog-content" placeholder="Type your content here"></textarea>
 		</div>	
 		<div id=b1>
-			<button class="mdl-button mdl-button--fab mdl-js-button mdl-js-ripple-effect" ><i class="material-icons">send</i></button>
+			<button onclick="postBlogPost()" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored danger" ><i class="material-icons">send</i></button>
 		</div>
 	</body>
 
