Fixed profile page

--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
 
 	<div id="login">
 
-		<h1><strong><p align="right">Welcome.</strong> Please login.</p></h1>
+		<h1 class="welcome-text"><strong><p align="right">Welcome.</strong> Please login.</p></h1>
 
 		<form action="javascript:void(0);" method="get">
 		</form>
 
 			<div class="twitter-before"><span class="fontawesome-google-plus"></span></div>
-			<button onclick="" id="googleLogin" class="twitter">Login Using Google</button>
+			<button onclick="googleLogin()" id="googleLogin" class="twitter">Login Using Google</button>
 
 		</p>
 
