--- a/editor.html
+++ b/editor.html
@@ -13,13 +13,14 @@
 	</head>
 	<body>
 
-		<div id="tb1">
-  			<form action="#">
+		<div id="tb1" class="container">
+  			<!-- <form action="#">
   				<div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label" >
     				<input class="mdl-textfield__input" type="text" id="blog-title">
     				<label class="mdl-textfield__label" for="blog-title">Title Here</label>
   				</div>
-			</form>
+			</form> -->
+			<input type="text" id="blog-title" class="form-control" placeholder="Type your title here">
   		</div>
   		<div id=ta1 class="container">
 			<textarea class="form-control" rows="10" cols="47" id="blog-content" placeholder="Type your content here"></textarea>
