--- a/profile.html
+++ b/profile.html
@@ -3,37 +3,38 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Profile card with Bootstrap 4</title>
+  <title>Profile</title>
   
   
-  <link rel='stylesheet prefetch' href='http://cdn.rawgit.com/twbs/bootstrap/v4-dev/dist/css/bootstrap.css'>
-<link rel='stylesheet prefetch' href='http://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css'>
+    <link rel='stylesheet prefetch' href='vendors/bootstrap/css/bootstrap.min.css'>
+    <link rel='stylesheet prefetch' href='vendors/font-awesome/css/font-awesome.min.css'>
 
-      <link rel="stylesheet" href="css/profilestyle.css">
+    <script src="https://www.gstatic.com/firebasejs/4.5.0/firebase.js"></script>
+
+    <link rel="stylesheet" href="css/profilestyle.css">
 
   
 </head>
 
 <body>
-  <div class='card card-profile text-center'>
-  <img alt='' class='card-img-top' src='https://unsplash.it/340/160?image=354'>
-  <div class='card-block'>
-    <img alt='' class='card-img-profile' src='https://it.gravatar.com/userimage/3434071/205a00fc16ae537b26b56f40790910fe.jpg?size=140'>
-    <h4 class='card-title'>
-      Nicola Pressi
-      <small>Front-end designer</small>
-    </h4>
-    <div class='card-links'>
-      <a class='fa fa-dribbble' href='#'></a>
-      <a class='fa fa-twitter' href='#'></a>
-      <a class='fa fa-facebook' href='#'></a>
+    <div class='card card-profile text-center'>
+        <!-- <img alt='' class='card-img-top' src='https://unsplash.it/340/160?image=354'> -->
+        <img alt='' class='card-img-top img-responsive' src='images/bg.png'>
+        <div class='card-block'>
+            <div id="card-info"></div>
+            <div class='card-links'>
+                <a class='fa fa-dribbble' href='#'></a>
+                <a class='fa fa-twitter' href='#'></a>
+                <a class='fa fa-facebook' href='#'></a>
+            </div>
+        </div>
     </div>
-  </div>
-</div>
-  <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js'></script>
-<script src='http://cdn.rawgit.com/twbs/bootstrap/v4-dev/dist/js/bootstrap.js'></script>
-
-    <script  src="js/index.js"></script>
 
 </body>
+
+<script src="js/config.js"></script>
+<script src="js/profile.js"></script>
+<script src='vendors/jquery/jquery.min.js'></script>
+<script src='vendors/bootstrap/js/bootstrap.min.js'></script>
+
 </html>
