Fixded back button

--- a/editor.html
+++ b/editor.html
@@ -13,13 +13,9 @@
 	</head>
 	<body>
 
+		<a href="main.html"><i class="material-icons back-btn">arrow_back</i></a>
+
 		<div id="tb1" class="container">
-  			<!-- <form action="#">
-  				<div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label" >
-    				<input class="mdl-textfield__input" type="text" id="blog-title">
-    				<label class="mdl-textfield__label" for="blog-title">Title Here</label>
-  				</div>
-			</form> -->
 			<input type="text" id="blog-title" class="form-control" placeholder="Type your title here">
   		</div>
   		<div id=ta1 class="container">
