--- a/profile.html
+++ b/profile.html
@@ -6,6 +6,9 @@
   <title>Profile</title>
   
   
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.blue-red.min.css" />
+
     <link rel='stylesheet prefetch' href='vendors/bootstrap/css/bootstrap.min.css'>
     <link rel='stylesheet prefetch' href='vendors/font-awesome/css/font-awesome.min.css'>
 
@@ -17,6 +20,9 @@
 </head>
 
 <body>
+
+    <a href="main.html"><i class="material-icons back-btn">arrow_back</i></a>
+
     <div class='card card-profile text-center'>
         <!-- <img alt='' class='card-img-top' src='https://unsplash.it/340/160?image=354'> -->
         <img alt='' class='card-img-top img-responsive' src='images/bg.png'>
