Added pictures in map pop-up

--- a/editor.html
+++ b/editor.html
@@ -43,3 +43,9 @@
 	<script src="js/post.js"></script>
 
 </html>
+
+
+<div id="demo-toast-example" class="mdl-js-snackbar mdl-snackbar">
+  <div class="mdl-snackbar__text"></div>
+  <button class="mdl-snackbar__action" type="button"></button>
+</div>
