--- a/main.html
+++ b/main.html
@@ -23,14 +23,14 @@
 	<div id="map"></div>
 
 	<div class="col-xs-12" id="zone-btns">
-		<div class="col-xs-offset-1 col-xs-3">
+		<div class="col-xs-offset-2 col-xs-3">
 			<a href="profile.html">
 				<button onclick="" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored safe">
 				<i class="material-icons">account_circle</i>
 				</button>
 			</a>
 		</div>
-		<div class="col-xs-offset-3 col-xs-3">
+		<div class="col-xs-offset-2 col-xs-3">
 			<a href="editor.html">
 				<button onclick="" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored danger">
 				<i class="material-icons">add</i>
@@ -57,3 +57,8 @@ src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBxvyr3dEr3Gm-ib5gV8A0uBdX
 </html>
 
 <div id="modal-div"></div>
+
+<div id="demo-toast-example" class="mdl-js-snackbar mdl-snackbar">
+  <div class="mdl-snackbar__text"></div>
+  <button class="mdl-snackbar__action" type="button"></button>
+</div>
