--- a/main.html
+++ b/main.html
@@ -20,17 +20,27 @@
 
 </head>
 <body>
+
+
+	
 	<div id="map"></div>
 
 	<div class="col-xs-12" id="zone-btns">
-		<div class="col-xs-offset-2 col-xs-3">
+		<div class="col-xs-3">
 			<a href="profile.html">
 				<button onclick="" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored safe">
 				<i class="material-icons">account_circle</i>
 				</button>
 			</a>
 		</div>
-		<div class="col-xs-offset-2 col-xs-3">
+		<div class="col-xs-offset-1 col-xs-3">
+			<a href="editor.html">
+				<button onclick="" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored danger">
+				<i class="material-icons">list</i>
+				</button>
+			</a>
+		</div>
+		<div class="col-xs-offset-1 col-xs-3">
 			<a href="editor.html">
 				<button onclick="" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored danger">
 				<i class="material-icons">add</i>
