--- a/profile.html
+++ b/profile.html
@@ -19,6 +19,24 @@
   
 </head>
 
+
+<style>
+.demo-card-wide.mdl-card {
+  width: 100%;
+}
+
+.demo-card-wide > .mdl-card__title {
+  color: #fff;
+  height: 176px;
+  /*background: url('../assets/demos/welcome_card.jpg') center / cover;*/
+}
+
+.demo-card-wide > .mdl-card__menu {
+  color: #000;
+}
+
+</style>
+
 <body>
 
     <a href="main.html"><i class="material-icons back-btn">arrow_back</i></a>
