--- a/main.html
+++ b/main.html
@@ -12,7 +12,7 @@
 	<script src="https://www.gstatic.com/firebasejs/4.5.0/firebase.js"></script>
 
 	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-	<link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.blue-red.min.css" />
+	<link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.grey-pink.min.css" />
 
 	<link rel="stylesheet" href="css/map.css">	
 
@@ -22,31 +22,56 @@
 <body>
 
 
-	
-	<div id="map"></div>
+	<div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
+	  <header class="mdl-layout__header">
+	    <div class="mdl-layout__header-row">
+	      <span class="mdl-layout-title">Go-LoG</span>
+	    </div>
+	  </header>
+	  <div class="mdl-layout__drawer">
+	    <span class="mdl-layout-title">Go-LoG</span>
+	    <nav class="mdl-navigation">
+	      <a class="mdl-navigation__link" href="">Link</a>
+	      <a class="mdl-navigation__link" href="">Link</a>
+	      <a class="mdl-navigation__link" href="">Link</a>
+	      <a class="mdl-navigation__link" href="">Link</a>
+	    </nav>
+	  </div>
+	  <main class="mdl-layout__content">
+	    <div class="page-content">
+	    	
+	    <div class="container map-slot">
 
-	<div class="col-xs-12" id="zone-btns">
-		<div class="col-xs-3">
-			<a href="profile.html">
-				<button onclick="" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored safe">
-				<i class="material-icons">account_circle</i>
-				</button>
-			</a>
+		<div id="map"></div>
+
+		<div class="col-xs-12" id="zone-btns">
+			<div class="col-xs-3">
+				<a href="profile.html">
+					<button onclick="" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored safe">
+					<i class="material-icons">account_circle</i>
+					</button>
+				</a>
+			</div>
+			<div class="col-xs-offset-1 col-xs-3">
+				<a href="editor.html">
+					<button onclick="" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored danger">
+					<i class="material-icons">list</i>
+					</button>
+				</a>
+			</div>
+			<div class="col-xs-offset-1 col-xs-3">
+				<a href="editor.html">
+					<button onclick="" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored danger">
+					<i class="material-icons">add</i>
+					</button>
+				</a>
+			</div>
 		</div>
-		<div class="col-xs-offset-1 col-xs-3">
-			<a href="editor.html">
-				<button onclick="" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored danger">
-				<i class="material-icons">list</i>
-				</button>
-			</a>
+
 		</div>
-		<div class="col-xs-offset-1 col-xs-3">
-			<a href="editor.html">
-				<button onclick="" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored danger">
-				<i class="material-icons">add</i>
-				</button>
-			</a>
-		</div>
+
+	    </div>
+	  </main>
 	</div>
 </body>
 
