--- a/main.html
+++ b/main.html
@@ -53,7 +53,7 @@
 				</a>
 			</div>
 			<div class="col-xs-offset-1 col-xs-3">
-				<a href="editor.html">
+				<a href="#">
 					<button onclick="" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored danger">
 					<i class="material-icons">list</i>
 					</button>
