--- a/main.html
+++ b/main.html
@@ -26,17 +26,10 @@
 	  <header class="mdl-layout__header">
 	    <div class="mdl-layout__header-row">
 	      <span class="mdl-layout-title">Go-LoG</span>
+	      <div class="mdl-layout-spacer"></div>
+	      <i onclick="signOut()" class="material-icons">exit_to_app</i>
 	    </div>
 	  </header>
-	  <div class="mdl-layout__drawer">
-	    <span class="mdl-layout-title">Go-LoG</span>
-	    <nav class="mdl-navigation">
-	      <a class="mdl-navigation__link" href="">Link</a>
-	      <a class="mdl-navigation__link" href="">Link</a>
-	      <a class="mdl-navigation__link" href="">Link</a>
-	      <a class="mdl-navigation__link" href="">Link</a>
-	    </nav>
-	  </div>
 	  <main class="mdl-layout__content">
 	    <div class="page-content">
 	    	
@@ -53,7 +46,7 @@
 				</a>
 			</div>
 			<div class="col-xs-offset-1 col-xs-3">
-				<a href="#">
+				<a href="newsFeed.html">
 					<button onclick="" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored danger">
 					<i class="material-icons">list</i>
 					</button>
@@ -76,6 +69,7 @@
 </body>
 
 
+<script src="js/config.js"></script>
 <script src="js/map.js"></script>
 
 
